--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Tab component factory with React",
   "main": "index.js",
   "scripts": {
-    "build": "gulp build",
+    "buildExample": "gulp buildExample",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
