--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "react": "^0.13.2",
+    "eventemitter3": "^1.0.2"
+  },
+  "devDependencies": {
     "browserify": "^10.1.3",
     "coffee-reactify": "^3.0.0",
     "coffee-script": "^1.9.2",
-    "eventemitter3": "^1.0.2",
     "gulp": "^3.8.11",
-    "react": "^0.13.2",
     "vinyl-source-stream": "^1.1.0"
   }
 }
