--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     "buildExample": "gulp buildExample",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/oreshinya/react-tab-factory.git"
+  },
   "author": "",
   "license": "MIT",
   "dependencies": {
