--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "name": "react-tab-factory",
   "version": "0.0.1",
   "description": "Tab component factory with React",
-  "main": "index.js",
+  "main": "lib/index.js",
   "scripts": {
     "buildExample": "gulp buildExample",
+    "prepublish": "rm -rf lib && cjsx -o lib -c src",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
@@ -14,11 +15,12 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "react": "^0.13.2",
-    "eventemitter3": "^1.0.2"
+    "eventemitter3": "^1.0.2",
+    "react": "^0.13.2"
   },
   "devDependencies": {
     "browserify": "^10.1.3",
+    "coffee-react": "^3.2.0",
     "coffee-reactify": "^3.0.0",
     "coffee-script": "^1.9.2",
     "gulp": "^3.8.11",
