--- a/package.json
+++ b/package.json
@@ -1,22 +1,21 @@
 {
   "name": "react-tab-factory",
   "version": "0.0.1",
-  "description": "Tab component factory with React",
+  "description": "Simple tab component with React",
   "main": "lib/index.js",
   "scripts": {
     "buildExample": "gulp buildExample",
-    "prepublish": "rm -rf lib && cjsx -o lib -c src",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "prepublish": "rm -rf lib && cjsx -o lib -c src"
   },
   "repository": {
     "type": "git",
     "url": "https://github.com/oreshinya/react-tab-factory.git"
   },
-  "author": "",
+  "author": "Shinya Takahashi",
   "license": "MIT",
   "dependencies": {
     "eventemitter3": "^1.0.2",
-    "react": "^0.13.2"
+    "react": "~0.13.2"
   },
   "devDependencies": {
     "browserify": "^10.1.3",
