--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "author": "Shinya Takahashi",
   "license": "MIT",
   "dependencies": {
-    "eventemitter3": "^1.0.2",
+    "eventemitter3": "^1.0.2"
+  },
+  "peerDependencies": {
     "react": "~0.13.0"
   },
   "devDependencies": {
